deploy/dev/tx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tx-test
spec:
  ports:
    - name: tx
      port: 10017
      protocol: TCP
      targetPort: 10017
  type: ClusterIP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: tx-test
subsets:
  - addresses:
      - ip: 10.142.0.11
    ports:
      - name: tx
        port: 10017
