deploy/dev/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: soft-pos-gateway
  namespace: card-processing
spec:
  selector:
    istio: ingressgateway
  servers:
    - hosts:
        - dev-pos-soft.unibank.lan
      port:
        name: http
        number: 80
        protocol: HTTP
