deploy/dev/virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: soft-pos-service
  namespace: card-processing
spec:
  hosts:
    - dev-pos-soft.unibank.lan
  gateways:
    - soft-pos-gateway
  http:
    - name: "soft-pos-vs"
#      match:
#        - uri:
#            prefix: "/SoftPos"
#      rewrite:
#        uri: "/"
      route:
        - destination:
            host: proxy-rtp-service.card-processing.svc.cluster.local
            port:
              number: 8080
